Alignments fixed

--- a/style.css
+++ b/style.css
@@ -1,18 +1,4 @@
-/*table
-{
-	font-size: 20;
-	font-family: arial;	
-	border-spacing: 30px;
-}*/
-
-.green
-{
-	color:green;
-}
-.red
-{
-	color:red;
-}
+body { padding-bottom: 70px; }
 input[type=number]
 {
 	width:100px;
